Opened 3 years ago
Closed 3 years ago
#17804 closed bug (fixed)
Kernel panic: mutex_lock() with realtekwifi USB RTL8188EUS adapter
Reported by: | Nexus-6 | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Drivers/Network/realtekwifi | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #17808 | |
Platform: | All |
Attachments (2)
Change History (5)
by , 3 years ago
Attachment: | IMG_3660.jpg added |
---|
by , 3 years ago
Attachment: | syslog.old added |
---|
comment:1 by , 3 years ago
Component: | Network & Internet/Wireless → Drivers/Network/realtekwifi |
---|---|
Keywords: | realtekwifi removed |
Milestone: | Unscheduled → R1/beta4 |
Owner: | changed from | to
Platform: | x86-64 → All |
Status: | new → assigned |
My bad, that's an oversight on my part. I'll post a fix in the next day or two.
comment:2 by , 3 years ago
Blocking: | 17808 added |
---|
Note:
See TracTickets
for help on using tickets.
KDL screenshot