freebsd_network: Use a dedicated USB mutex instead of &Giant.

Fixes #17804.